# assettool

./: AssImpModel.cpp  AssImpModel.h  CAssImp.cpp  CAssImp.h  CCHCEngine.cpp  CCHCEngine.h  CCHCKeyframe.cpp  CCHCKeyframe.h  CCHCMax.h  CCHCMaxXML.cpp  CCHCMaxXML.h  CCollision.cpp  CCollision.h  CFile.cpp  CFile.h  CFont.h  CGTASA.h  CGame.cpp  CGame.h  CGameSA.cpp  CGameTHPS.cpp  CGameTHPS.h  CGeneric.cpp  CGeneric.h  CHCMax.cpp  CHCMesh.cpp  CHCMesh.h  CHCTexture.cpp  CHCTexture.h  CImage.h  CKeyframeCollection.cpp  CKeyframeCollection.h  CKeyframeSeqCollection.cpp  CKeyframeSeqCollection.h  CKeyframeSequence.cpp  CKeyframeSequence.h  CMakeCache.txt  CMakeLists.txt  CMaterial.cpp  CMaterial.h  (+49 more)
Assimp/: AssImpModel.cpp  AssImpModel.h  CAssImp.cpp  CAssImp.h
CHCEngine/: CCHCEngine.cpp  CCHCEngine.h  CCHCKeyframe.cpp  CCHCKeyframe.h  CHCMesh.cpp  CHCMesh.h  CHCTexture.cpp  CHCTexture.h
GTASA/: CGTASA.h  CGameSA.cpp  col.cpp  col.h  dff.cpp  ifp.cpp  ifp.h  imgv2.cpp  imgv2.h  txd.cpp  txd.h
Generic/: CCollision.cpp  CCollision.h  CFont.h  CGame.cpp  CGame.h  CGeneric.cpp  CGeneric.h  CImage.h  CKeyframeCollection.cpp  CKeyframeCollection.h  CKeyframeSeqCollection.cpp  CKeyframeSeqCollection.h  CKeyframeSequence.h  CMaterial.cpp  CMaterial.h  CMesh.cpp  CMesh.h  CTexture.cpp  CTexture.h  CTextureCollection.cpp  Cubemap.cpp  DataBank.cpp  DataBank.h  DataResolver.h  ScenePack.cpp  ScenePack.h  TTF.cpp  TTF.h  coordinate_normalizer.cpp  coordinate_normalizer.h  fileExport.h  json.cpp  json.h  plyloader.cpp  plyloader.h  pngExporter.cpp  pngExporter.h  texfolder.cpp  texfolder.h
Generic/BSP/: BSP.cpp  BSP.h  BSPGen.cpp  BSPGen.h
Generic/BSP/new/: BSP.h
Platform/UNIX/: unix_filesearcher.cpp
Platform/Win32/: win32_filesearcher.cpp
THPS/: CGameTHPS.cpp  CGameTHPS.h  CTHPSCol.cpp  CTHPSCol.h  CTHPSImg.cpp  CTHPSImg.h  CTHPSResolver.cpp  CTHPSResolver.h  CTHPSScene.cpp  CTHPSScene.h
XML/: CCHCMax.h  CCHCMaxXML.cpp  CCHCMaxXML.h  CHCMax.cpp
libthps/: Font.cpp  Font.h  Image.cpp  LibTHPS.h  Material.h  Mesh.cpp  Scene.h  Sector.cpp  buffreader.cpp  buffwriter.h  chc_endian.cpp  misc.cpp  swizzle.cpp  texture.cpp  texturetable.h
